<resources>
    <string name="app_name">BD Jobs TestOne</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deadline">Deadline</string>
    <string name="experience">Experience</string>
    <string name="salary">Salary</string>
    <string name="logo">logo</string>
    <string name="salary_range">%s to %s ৳</string>
    <string name="negotiable">Negotiable</string>
    <string name="na">NA</string>
    <string name="experience_range">%d to %d year(s)</string>
    <string name="instruction">Instruction:</string>
</resources>